--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Jogo da Forca</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="d-flex aling-items-center">
+<body class="d-flex align-items-center">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-6.mx-auto.text-center">
+            <div class="col-md-8 col-lg-6 mx-auto text-center">
                 <h1>Jogo da Forca</h1>
                 <canvas id="canvas" width="200" height="200"></canvas>
                 <h2 class="my-3"></h2>
-                <button id="btnreiniciar" class="btn btn-success mb-3"
+                <button id="btnReiniciar" class="btn btn-success mb-3"
                 onclick="iniciarJogo()">
                     Reiniciar
                 </button>
